# ShanghaiTech-CS120-Fall2022-project

./: .gitignore  .gitmodules  Cargo.toml  README.md
design/: includes.tex  main.tex  main.toc  reference.bib  report.tex  sdss2020.sty  titlepage.tex  tmpl.tex
design/sections/: application.tex  conclusion.tex  datalink.tex  introduction.tex  network.tex  transport.tex
proj1_acoustic_link/: Cargo.toml  cmp.py  gen_bits.py  input.txt  input_gen.py
proj1_acoustic_link/src/: default_config.rs  helper.rs  lib.rs  phy_layer.rs  phy_packet.rs  sample_stream.rs
proj1_acoustic_link/src/block_buffer/: buffer.rs  concurrent_buffer.rs  mod.rs
proj1_acoustic_link/src/defaut_config/: mod.rs
proj1_acoustic_link/src/helper/: bytes_bits.rs  crc_seq.rs  mod.rs  paddings.rs  signal.rs  tests.rs
proj1_acoustic_link/src/phy_layer/: atomic.rs  common.rs  crc_seq.rs  mocking.rs  mod.rs  ofdm.rs  plain.rs  rs_transmit.rs  traits.rs  with_crc.rs
proj1_acoustic_link/src/phy_layer/ofdm/: config.rs
proj1_acoustic_link/src/phy_layer/plain/: config.rs
proj1_acoustic_link/src/phy_packet/: audio_phy_txrx.rs  frame_detect.rs  mod.rs  modem.rs  modulation.rs  preambles.rs  traits.rs  txrx.rs
proj1_acoustic_link/src/phy_packet/frame_detect/: tests.rs
proj1_acoustic_link/src/phy_packet/modem/: line_code.rs  ofdm.rs  proj2_modem.rs  psk.rs  tests.rs
proj1_acoustic_link/src/phy_packet/modulation/: ofdm.rs  psk.rs  tests.rs
proj1_acoustic_link/src/sample_stream/: cpal_stream.rs  file_stream.rs  hound_stream.rs  iterator_stream.rs  loopback_stream.rs  mod.rs  traits.rs
proj1_acoustic_link/src/sample_stream/tests/: cpal_stream_tests.rs  mod.rs
proj1_acoustic_link/src/traits/: mod.rs  packet.rs  sample.rs  stream.rs
proj1_acoustic_link/tests/: part1.rs  part2.rs  part3.rs  part4.rs  part5.rs  plain_benchmark.rs  plain_transmit.rs
proj2_multiple_access/: Cargo.toml  cmp.py  input_gen.py
proj2_multiple_access/src/: common.rs  lib.rs  mac.rs  p2p_full_duplex.rs  packet.rs
proj2_multiple_access/src/p2p_full_duplex/: test.rs
proj2_multiple_access/src/packet/: packet.rs  tests.rs
proj3_gateway/: Cargo.toml  INPUT.txt  clear_rules.fish  no_rst.fish  note.md  ping_setup.fish
proj3_gateway/src/: aip_layer.rs  common.rs  lib.rs  packet.rs  socket.rs  tests.rs
proj3_gateway/src/aip_layer/: accessor.rs  fwd.rs  ipc.rs  nat.rs  provider.rs
proj3_gateway/src/socket/: icmp.rs  tcp.rs  transport_protocols.rs  udp.rs
proj3_gateway/src/socket/tcp/: tcp_state_machine.rs
proj3_gateway/src/socket/tcp/tcp_state_machine/: tcp_state_machine_worker.rs  wrapping_integers.rs
proj3_gateway/src/tests/: packet.rs  raw_sock.rs
proj4_ftp/: Cargo.toml
proj4_ftp/src/: asock.rs  cli_util.rs  ftp_client.rs  ftp_cmds.rs  lib.rs
