[package]
name = "proj1_acoustic_link"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
rand = "0.8"

[dependencies]
cpal = {path = "../patched_cpal/"}
hound = "3.5"

# using air-gapped transmission or wired transmission
[features]
default = []
wired = []
