[package]
name = "proj1_acoustic_link"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
rand = "0.8"

[dependencies]
cpal = { path = "../patched_cpal/" }
hound = "3.5"
crc = "3.0"
reed-solomon-erasure = "6.0"
rustfft = "6.0"
az = "1.2.1"
fixed = "1.19"
cordic = "0.1.5"

# using air-gapped transmission or wired transmission
[features]
default = []
wired = []
nofloat = []
