[package]
name = "proj2_multiple_access"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rand = "0.8"

[dependencies]
proj1_acoustic_link = { path = "../proj1_acoustic_link", features = ["wired"] }
crossbeam-channel = "0.5"
