[package]
name = "proj3_gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socket2 = { version = "0.4", features = ["all"] }
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"
pnet = "0.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
proj2_multiple_access = { path = "../proj2_multiple_access" }
crossbeam-channel = "0.5"
deku = "0.15"
