[package]
name = "proj3_gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proj2_multiple_access = { path = "../proj2_multiple_access" }
# network programming: packet construction&extraction, posix socket API
socket2 = { version = "0.4", features = ["all"] }
pnet = "0.31"
# serialize/deserialize for IPC
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# logging
log = "0.4"
env_logger = "0.9"
# others
crossbeam-channel = "0.5"
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }
